--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <p>知识改变命运</p>
-    <div></div>
+    <div>哈哈哈真开心</div>
     <a href="http://www.baidu.com"></a>
+    <p>好好学习，天天向上</p>
 </body>
 </html>
